--- a/popup/popup.html
+++ b/popup/popup.html
@@ -4,33 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Code Snippet Organizer</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="popup.css" />
   </head>
   <body>
     <div class="container">
-      <h1>Code Organizer</h1>
+      <h1>Code Snippet Organizer</h1>
 
-      <!-- Form to Add a New Snippet -->
-      <form id="snippet-form">
-        <textarea
-          id="snippet-input"
-          placeholder="Paste your code snippet here..."
-          required
-        ></textarea>
-        <input
-          type="text"
-          id="language-input"
-          placeholder="Language (e.g., Python, Go)"
-          required
-        />
-        <button type="submit">Save Snippet</button>
-      </form>
+      <textarea
+        id="codeSnippet"
+        placeholder="Paste your code here..."
+      ></textarea>
 
-      <!-- Display Saved Snippets -->
-      <div id="snippets-container">
-        <h2>Saved Snippets</h2>
-        <ul id="snippet-list"></ul>
-      </div>
+      <button id="saveButton">Save Snippet</button>
+
+      <h3>Saved Snippets</h3>
+      <table id="snippetTable">
+        <thead>
+          <tr>
+            <th>Code</th>
+            <th>Language</th>
+            <th>Description</th>
+            <th>Time/Date</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- Saved snippets will be inserted here -->
+        </tbody>
+      </table>
     </div>
 
     <script src="popup.js"></script>
