Integrated backend using fastapi, fixed CORS, and updated frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,10 +32,12 @@
         <table id="snippet-table">
           <thead>
             <tr>
+              <th>Copy</th>
               <th>Code</th>
               <th>Language</th>
               <th>Description</th>
               <th>Time/Date</th>
+              <th>Delete</th>
             </tr>
           </thead>
           <tbody>
@@ -44,5 +46,6 @@
         </table>
       </div>
     </div>
+    <script src="popup.js"></script>
   </body>
 </html>
